# stridi

./: .gitignore  LICENSE  README.md  default.nix  shake.hs  shell.nix  stack.yaml  stridi.cabal  stridi_todo.txt  test.hs  tikz.hs
StriDi/: Cells.hs  DSL.hs  Render.hs  TypedSeq.hs
StriDi/DSL/: Monoidal.hs  PROP.hs
Stridi/: Cells.hs  Render.hs  TypedSeq.hs
Text/LaTeX/: StriDi.hs  Stridi.hs
nix/: sources.json
src/StriDi/: Cells.hs  Layout.hs  Render.hs  TypedSeq.hs
src/StriDi/DSL/: PROP.hs
